--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="/style.css">
     <meta name="theme-color" content="#fafafa">
-
 </head>
 
 <body>
@@ -38,23 +37,18 @@
                             <a class="nav-link text-light active" aria-current="page" href="#">Home</a>
                             <a class="nav-link text-light " aria-current="page" href="#">About</a>
                             <a class="nav-link text-light " aria-current="page" href="#">Contact</a>
-                            <a class="nav-link text-light " aria-current="page" href="#">FAQ</a>
-                            <a class="nav-link text-light " aria-current="page" href="#">Aftercare</a>
+                            <a class="nav-link text-light " aria-current="page" href="#">FAQ & Aftercare</a>
+                            <a class="nav-link text-light " aria-current="page" href="#"></a>
                         </div>
                     </div>
                 </div>
             </nav>
         </section>
-
-
-
-
         <section class="landing-container">
-
             <img src="https://images.unsplash.com/photo-1565058379802-bbe93b2f703a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
                 class="background">
             <!-- <h1 class="title text-center col-12">White Pine Tattoo </h1> -->
-            <img class="title text-center col-12 col-md-8 col-lg-6" src="imgs/1.png">
+            <img class="title text-center col-12 col-md-8 col-lg-6  hero-img" src="imgs/1.png">
             <br>
             <div class="containter">
                 <div class="row">
@@ -63,26 +57,65 @@
                     </div>
                 </div>
             </div>
-
-
         </section>
+        <section class="artists-container">
+            <div>
+                <div class="container">
+                    <h2 class="text-center">Artists</h2>
+                    <!--first artist-->
+                    <div class="row d-flex">
+                        <div class="col-12 col-md-6">
+                            <div class="bg-info">
+                                <img> photo
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6">
+                            <div class="bg-danger">
+                                <img> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus, magni!
+                                Dolorum mollitia quia excepturi est tempore ipsa debitis in natus quae molestiae, fugiat
+                                explicabo sunt vitae aut ratione adipisci dignissimos. Lorem ipsum dolor sit amet
+                                consectetur adipisicing elit. Iusto aspernatur sed architecto enim molestiae aliquam
+                                labore, est sunt ducimus rem minima voluptatibus facere, beatae quae ex. Veniam
+                                recusandae sequi nihil?
+                            </div>
+                        </div>
+                    </div>
+                    <!-- last artist-->
+                    <div class="row d-flex">
+                        <div class="col-12 col-md-6 order-md-last">
+                            <div class="bg-info">
+                                <img> photo
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6">
+                            <div class="bg-danger">
+                                <img> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus, magni!
+                                Dolorum mollitia quia excepturi est tempore ipsa debitis in natus quae molestiae, fugiat
+                                explicabo sunt vitae aut ratione adipisci dignissimos. Lorem ipsum dolor sit amet
+                                consectetur adipisicing elit. Iusto aspernatur sed architecto enim molestiae aliquam
+                                labore, est sunt ducimus rem minima voluptatibus facere, beatae quae ex. Veniam
+                                recusandae sequi nihil?
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="contact-container">
+            <div class="container">
 
-        <section>
-            <div class="second-container">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quae ad rerum, iusto saepe vitae
-                quibusdam, officia molestiae recusandae, illo ratione excepturi tenetur sed dignissimos deserunt nemo
-                repellendus tempore amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut culpa eum dolore
-                illum qui dignissimos laboriosam veritatis voluptates aperiam. Laborum dolor, inventore neque blanditiis
-                architecto consectetur nostrum quaerat quam laboriosam. Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Exercitationem maiores, soluta debitis illum officia quos laborum in sit esse cumque
-                aperiam dolorem a quibusdam alias iste blanditiis minima recusandae deserunt. Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Aperiam autem quos est incidunt laudantium eaque numquam, corrupti, quae
-                eum nostrum voluptatum deserunt voluptates, recusandae iure illo! Veritatis neque aut deleniti. Lorem
-                ipsum dolor sit amet consectetur adipisicing elit. Voluptate, amet accusantium! Error ducimus blanditiis
-                doloribus autem hic natus minima ab odit laudantium. Ipsum culpa iste sit recusandae quisquam
-                reprehenderit. Quam. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo earum animi voluptate
-                blanditiis provident non corporis ducimus, officia, quod dolorum molestiae a sed magnam aperiam ipsum
-                ad, voluptatum labore voluptates.
+            </div>
+        </section>
+        <section class="faq-container">
+            <div class="container">
+                <div class="row">
+                    <div class="text-center">
+                        <div class="container bg-">
+                            <h2>Visit our FAQ for aftercare and more</h2>
+                        <a><button>Visit</button></a>
+                        </div>
+                        
+                </div>
             </div>
         </section>
         <!-- Footer -->
@@ -97,6 +130,7 @@
                         <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
                     </ul>
                     <p class="text-center text-muted">© 2022 Company, Inc</p>
+                    <p class="text-center text-muted">Site by syrussamson.ca</p>
                 </footer>
             </div>
         </section>
