--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Page Title - My Site</title> <!-- TODO: update page title -->
+    <title>White Pine Tattoo | Book today! </title> <!-- TODO: update page title -->
     <meta name="description" content=""> <!-- TODO: update meta description -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Home - Page"> <!-- TODO: update OG Title -->
@@ -49,6 +49,10 @@
                 class="background">
             <!-- <h1 class="title text-center col-12">White Pine Tattoo </h1> -->
             <img class="title text-center col-12 col-md-8 col-lg-6  hero-img" src="imgs/1.png">
+            <div class="title-btn d-flex justify-content-center">
+                <button class="btn btn-primary ">View Galeries</button>
+                <button class="btn btn-secondary ">Contact Us</button>
+            </div>
             <br>
             <div class="containter">
                 <div class="row">
@@ -58,7 +62,7 @@
                 </div>
             </div>
         </section>
-        <section class="artists-container">
+        <section class="artists-container bg-dark">
             <div>
                 <div class="container">
                     <h2 class="text-center">Artists</h2>
@@ -66,11 +70,12 @@
                     <div class="row d-flex">
                         <div class="col-12 col-md-6">
                             <div class="bg-info">
-                                <img> photo
+                                <img> < photo carousel >
                             </div>
                         </div>
                         <div class="col-12 col-md-6">
                             <div class="bg-danger">
+                                <h2>Ruby</h2>
                                 <img> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus, magni!
                                 Dolorum mollitia quia excepturi est tempore ipsa debitis in natus quae molestiae, fugiat
                                 explicabo sunt vitae aut ratione adipisci dignissimos. Lorem ipsum dolor sit amet
@@ -84,11 +89,12 @@
                     <div class="row d-flex">
                         <div class="col-12 col-md-6 order-md-last">
                             <div class="bg-info">
-                                <img> photo
+                                <img> < photo carousel >
                             </div>
                         </div>
                         <div class="col-12 col-md-6">
                             <div class="bg-danger">
+                                <h2>Jeff</h2>
                                 <img> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus, magni!
                                 Dolorum mollitia quia excepturi est tempore ipsa debitis in natus quae molestiae, fugiat
                                 explicabo sunt vitae aut ratione adipisci dignissimos. Lorem ipsum dolor sit amet
@@ -103,15 +109,26 @@
         </section>
         <section class="contact-container">
             <div class="container">
-
+                <div class="row">
+                    <div class="col">
+                        <h3>Want to book an appointment? fill out this form and we will get back to you</h3>
+                        <form>
+                            <input>
+                            <input>
+                            <input>
+                        </form>
+                        <!-- form -->
+                        <h4> Or contact us at: (123) 456-7890</h4>
+                    </div>
+                </div>
             </div>
         </section>
-        <section class="faq-container">
+        <section class="faq-container bg-dark">
             <div class="container">
                 <div class="row">
                     <div class="text-center">
-                        <div class="container bg-">
-                            <h2>Visit our FAQ for aftercare and more</h2>
+                        <div class="container bg-dark">
+                            <h2>Visit our FAQ for aftercare instructions and more</h2>
                         <a><button>Visit</button></a>
                         </div>
                         
@@ -119,15 +136,21 @@
             </div>
         </section>
         <!-- Footer -->
-        <section class="footer-container">
+        <section class="footer-container bg-dark ">
             <div class="container">
-                <footer class="py-3 my-4">
-                    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-                        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+                <div class="row">
+
+                </div>
+                <footer class="py-3 my-4 text-light">
+                    <div>
+                        <p class="text-light text-center">Back to Top</p>
+                    </div>
+                    <ul class="nav justify-content-center border-bottom pb-3 mb-3 text-light">
+                        <li class="nav-item text-light"><a href="#" class="nav-link px-2 text-light">Home</a></li>
+                        <li class="nav-item text-light"><a href="#" class="nav-link px-2 text-light">Features</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link px-2 text-light">Pricing</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link px-2 text-light">FAQs</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link px-2 text-light ">About</a></li>
                     </ul>
                     <p class="text-center text-muted">© 2022 Company, Inc</p>
                     <p class="text-center text-muted">Site by syrussamson.ca</p>
