--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="container">
                     <h2 class="text-center">Artists</h2>
                     <!--first artist-->
-                    <div class="row d-flex">
+                    <div class="row d-flex mt-5">
                         <div class="col-12 col-md-6">
                             <h2>Ruby</h2>
                             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
@@ -108,13 +108,12 @@
                                     voluptatem!
                                     <br>
                                 </p> 
-                                <br>
                                 <a class="link-primary">View Gallery...</a>
                             </div>
                         </div>
                     </div>
                     <!-- last artist-->
-                    <div class="row d-flex">
+                    <div class="row d-flex mt-5">
                         <div class="col-12 col-md-6 order-md-last">
                             <h2>Jeff</h2>
                             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
@@ -151,7 +150,6 @@
                                 Praesentium nulla, ipsum tempore, iusto cupiditate fugit illum minima non voluptas cum,
                                 cumque magni numquam laboriosam! Necessitatibus assumenda nemo ullam perspiciatis
                                 dolore?
-                                <br>
                                 </p>
                                 <a class="link-primary">View Gallery...</a>
                             </div>
@@ -160,26 +158,31 @@
                 </div>
             </div>
         </section>
-        <section class="connect-container bg-darl">
+        <section class="connect-container bg-dark">
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-6">
-                        <h3 class="text-center">Connect with us on Social Media!</h3>
+                        <h3 class="text-center text-light">Connect with us on Social Media!</h3>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <img class="m-4"src="//placehold.it/400x400/557573">
                     </div>
                 </div>
             </div>
         </section>
-        <section class="contact-container">
+        <section class="contact-container bg-clear">
             <div class="container">
                 <div class="row">
-                    <h3>Want to book an appointment? fill out this form and we will get back to you</h3>
-
-                    <input>
-                    <input>
-                    <input>
-
+                    <h3 class="">Want to book an appointment? fill out this form and we will get back to you!</h3>
+                    <div class="container mt-2">
+                        <div class="row">
+                            <input class="col-12 m-1">
+                            <input class="col-12 m-1">
+                            <input class="col-12 m-1">
+                        </div>
+                    </div>
                     <!-- form -->
-                    <h4> Or contact us at: (123) 456-7890</h4>
+                    <h4 class="text-center"> Or contact us at: (123) 456-7890</h4>
                 </div>
             </div>
         </section>
