--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             <!-- <h1 class="title text-center col-12">White Pine Tattoo </h1> -->
             <img class="title text-center col-12 col-md-8 col-lg-6  hero-img" src="imgs/1 (1).png">
             <div class="title-btn d-flex justify-content-center">
-                <button class="btn btn-primary m-2 rounded-4">View Galleries</button>
-                <button class="btn btn-secondary m-2 rounded-4">Contact Us</button>
+                <button class="btn btn-primary m-2 rounded-pill">View Galleries</button>
+                <button class="btn btn-secondary m-2 rounded-pill">Contact Us</button>
             </div>
             <br>
             <div class="containter">
@@ -69,7 +69,7 @@
                     <!--first artist-->
                     <div class="row d-flex mt-5">
                         <div class="col-12 col-md-6">
-                            <h2>Ruby</h2>
+                            <h3 class="text-light">Ruby</h3>
                             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                                 <div class="carousel-inner">
                                   <div class="carousel-item active">
@@ -115,7 +115,7 @@
                     <!-- last artist-->
                     <div class="row d-flex mt-5">
                         <div class="col-12 col-md-6 order-md-last">
-                            <h2>Jeff</h2>
+                            <h3 class="text-light">Jeff</h3>
                             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                                 <div class="carousel-inner">
                                   <div class="carousel-item active">
@@ -165,7 +165,7 @@
                         <h3 class="text-center text-light">Connect with us on Social Media!</h3>
                     </div>
                     <div class="col-12 col-md-6">
-                        <img class="m-4"src="//placehold.it/400x400/557573">
+                        <img class="m-4 rounded-3"src="//placehold.it/400x400/557573">
                     </div>
                 </div>
             </div>
@@ -173,7 +173,7 @@
         <section class="contact-container bg-clear">
             <div class="container">
                 <div class="row">
-                    <h3 class="">Want to book an appointment? fill out this form and we will get back to you!</h3>
+                    <h2 class="">Want to book an appointment? fill out this form and we will get back to you!</h2>
                     <div class="container mt-2">
                         <div class="row">
                             <input class="col-12 m-1">
@@ -182,7 +182,7 @@
                         </div>
                     </div>
                     <!-- form -->
-                    <h4 class="text-center"> Or contact us at: (123) 456-7890</h4>
+                    <h3 class="text-center"> Or contact us at: (123) 456-7890</h3>
                 </div>
             </div>
         </section>
