--- a/gallery.html
+++ b/gallery.html
@@ -16,6 +16,8 @@
     <!-- Bootstrap CDN-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        <!-- Masonry -->
+        <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" defer></script>
     <link rel="stylesheet" href="/style.css">
     <meta name="theme-color" content="#fafafa">
 </head>
@@ -55,6 +57,45 @@
                             <a href="./index.html" class="back text-decoration-none text-light">
                                 <h5 class=""> ← Go Back</h5>
                             </a>
+                        </div>
+                    </div>
+                    <div class="row" data-masonry='{"percentPosition": true },  "itemSelector": ".col" }'>
+                        <div class="col-sm-6 col-lg-4">
+                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                        </div>                        <div class="col-sm-6 col-lg-4">
+                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                        </div>                        <div class="col-sm-6 col-lg-4">
+                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                        </div>                        <div class="col-sm-6 col-lg-4">
+                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                        </div>                        <div class="col-sm-6 col-lg-4">
+                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                        </div>                        <div class="col-sm-6 col-lg-4">
+                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                        </div>                        <div class="col-sm-6 col-lg-4">
+                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                        </div>                        <div class="col-sm-6 col-lg-4">
+                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                        </div>                        <div class="col-sm-6 col-lg-4">
+                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                        </div>                        <div class="col-sm-6 col-lg-4">
+                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                        </div>                        <div class="col-sm-6 col-lg-4">
+                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                        </div>                        <div class="col-sm-6 col-lg-4">
+                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                        </div>                        <div class="col-sm-6 col-lg-4">
+                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                        </div>                        <div class="col-sm-6 col-lg-4">
+                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                        </div>                        <div class="col-sm-6 col-lg-4">
+                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                        </div>                        <div class="col-sm-6 col-lg-4">
+                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                        </div>                        <div class="col-sm-6 col-lg-4">
+                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                        </div>                        <div class="col-sm-6 col-lg-4">
+                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
                         </div>
                     </div>
                 </div>
