--- a/index.html
+++ b/index.html
@@ -16,16 +16,24 @@
     <!-- Bootstrap CDN-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        <!-- Styles -->
     <link rel="stylesheet" href="/style.css">
-    <meta name="theme-color" content="#fafafa">
+    <!-- FA CDN -->
+    <script src="https://kit.fontawesome.com/9de7b5c7f4.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <script type="text/javascript">
+  
+
+});
+       
+       </script>
     <div class="wrapper">
         <!-- Content start -->
         <!-- Header -->
         <section class="header-container">
-            <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+            <nav class="navbar sticky-top navbar-expand-md navbar-dark bg-dark">
                 <div class="container-fluid">
                     <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
@@ -49,8 +57,11 @@
                 class="background">
             <!-- <h1 class="title text-center col-12">White Pine Tattoo </h1> -->
             <img class="title text-center col-12 col-md-8 col-lg-6  hero-img" src="imgs/1 (1).png">
+            <div class="title-addr d-flex justify-content-center">
+               <h2>123 alpine Drive city, ON </h2> 
+            </div>
             <div class="title-btn d-flex justify-content-center">
-                <button class="btn btn-primary m-2 rounded-pill">View Galleries</button>
+               <a href="./gallery.html"><button class="btn btn-primary m-2 rounded-pill">View Galleries</button></a>
                 <button class="btn btn-secondary m-2 rounded-pill">Contact Us</button>
             </div>
             <br>
@@ -62,14 +73,14 @@
                 </div>
             </div>
         </section>
-        <section class="artists-container bg-dark">
+        <section class="artists-container bg-dark pt-3">
             <div>
                 <div class="container">
-                    <h2 class="text-center">Artists</h2>
+                    <h2 class="text-center">Meet the Artists</h2>
                     <!--first artist-->
                     <div class="row d-flex mt-5">
                         <div class="col-12 col-md-6">
-                            <h3 class="text-light">Ruby</h3>
+                            <h3 class="text-light">Anne</h3>
                             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                                 <div class="carousel-inner">
                                   <div class="carousel-item active">
@@ -108,12 +119,12 @@
                                     voluptatem!
                                     <br>
                                 </p> 
-                                <a class="link-primary">View Gallery...</a>
+                                <a class="link-primary" href>View Gallery...</a>
                             </div>
                         </div>
                     </div>
                     <!-- last artist-->
-                    <div class="row d-flex mt-5">
+                    <div class="row d-flex mt-5 pb-3">
                         <div class="col-12 col-md-6 order-md-last">
                             <h3 class="text-light">Jeff</h3>
                             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
@@ -158,31 +169,48 @@
                 </div>
             </div>
         </section>
-        <section class="connect-container bg-dark">
+        <section class="connect-container pt-3 pb-5 bg-dark">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 col-md-6">
-                        <h3 class="text-center text-light">Connect with us on Social Media!</h3>
+                    <div class="col-12 text-center">
+                        <h3 class="text-light">Connect with us:</h3>
                     </div>
-                    <div class="col-12 col-md-6">
-                        <img class="m-4 rounded-3"src="//placehold.it/400x400/557573">
+                </div>
+            </div>
+            <div class="container-md">
+                <div class="row">
+                    <div class="fa-xl pt-3 col text-center">
+                        <i class="fa-2xl p-3 fa-brands fa-facebook"></i>
+                        <i class="fa-2xl p-3 fa-brands fa-instagram"></i>
+                        <i class="fa-2xl p-3 fa-brands fa-tiktok"></i>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="contact-container bg-clear">
+        <section class="contact-container">
             <div class="container">
                 <div class="row">
-                    <h2 class="">Want to book an appointment? fill out this form and we will get back to you!</h2>
+                    <h2 class="contact-text">Want to book an appointment? fill out this form and we will get back to you as soon as possible.</h2>
                     <div class="container mt-2">
                         <div class="row">
-                            <input class="col-12 m-1">
-                            <input class="col-12 m-1">
-                            <input class="col-12 m-1">
+                            <form>
+                            <input class="col-12 m-1" placeholder="Name..." required>
+                            <input class="col-12 m-1" placeholder="Email..." required>
+                            <input class="col-12 m-1" placeholder="Phone..." required>
+                            <textarea class="col-12 m-1" placeholder="Your message..."></textarea>
+                            <button clas="text-center btn btn-primary">Submit</button>
+                            </form>
                         </div>
                     </div>
                     <!-- form -->
-                    <h3 class="text-center"> Or contact us at: (123) 456-7890</h3>
+                    <h3 class="text-center text-white contact-text"> Or contact us at: (123) 456-7890</h3>
+                    <div class="container">
+                        <p class="bg-dark text-light">
+                            Due to a high volume of incoming messages, we encourage you to read our FAQ before sending us a message.
+                            This is to ensure that we respond to your inquiries as quickly and efficiently as possible. Currently, 
+                            walk-ins are not available at this time.
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -191,7 +219,7 @@
                 <div class="row">
                     <div class="text-center">
                         <div class="container bg-dark">
-                            <h2>Visit our FAQ for aftercare instructions and more</h2>
+                            <h2>See our FAQ for aftercare instructions and more</h2>
                             <a><button>Visit</button></a>
                         </div>
 
@@ -214,9 +242,16 @@
                         <a class="nav-link text-light " aria-current="page" href="#">Contact</a>
                         <a class="nav-link text-light " aria-current="page" href="#">FAQ & Aftercare</a>
                     </ul>
-                    <p class="text-center text-light">© 2022 Company, Inc</p>
-                    <p class="text-center text-light ">Site by <a class=" text-decoration-none text-info"
-                            target="_blank" href="https://www.syrussamson.ca">syrussamson.ca</a></p>
+                    <div class="container-md">
+                        <div class="row">
+                            <div class="pt-3 pb-3 col text-center">
+                                <i class="fa-2xl p-2 fa-brands fa-facebook"></i>
+                                <i class="fa-2xl p-2 fa-brands fa-instagram"></i>
+                                <i class="fa-2xl p-2 fa-brands fa-tiktok"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <p class="text-center text-light">© 2023 White Pine Tattoo, Inc</p>
                 </footer>
             </div>
         </section>
