--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
                                 <input class="col-12 m-1" placeholder="Email..." required>
                                 <input class="col-12 m-1" placeholder="Phone..." required>
                                 <textarea class="col-12 m-1" placeholder="Your message..."></textarea>
-                                <button clas="text-center btn btn-primary">Submit</button>
-                            </form>
-                        </div>
+                                <button class="btn btn-primary">Submit</button>
+                                    </form>
+                            </div>
                     </div>
                     <!-- form -->
                     <h3 class="text-center text-white contact-text"> Or contact us at: (123) 456-7890</h3>
@@ -230,7 +230,7 @@
                     <div class="text-center">
                         <div class="container bg-dark">
                             <h2>See our FAQ for aftercare instructions and more</h2>
-                            <a><button>Visit</button></a>
+                            <a><button class="btn btn-primary">Visit</button></a>
                         </div>
 
                     </div>
