--- a/FAQ.html
+++ b/FAQ.html
@@ -17,7 +17,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <script src="https://kit.fontawesome.com/9de7b5c7f4.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <meta name="theme-color" content="#fafafa">
 </head>
 
