--- a/gallery.html
+++ b/gallery.html
@@ -20,7 +20,8 @@
     <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js"
         integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous"
         defer></script>
-    <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <meta name="theme-color" content="#fafafa">
     <script src="https://kit.fontawesome.com/9de7b5c7f4.js" crossorigin="anonymous"></script>
 
