formatted border on resize

--- a/FAQ.html
+++ b/FAQ.html
@@ -65,7 +65,7 @@
     <section class="container">
         <div class="row">
             <div class="col-0 col-md-4 col-sm-hidden ">
-                <nav id="navbar" class="h-100 flex-column align-items-stretch  border-end bg-dark">
+                <nav id="navbar" class="h-70 overflow-y-scroll flex-column align-items-stretch  border-start border-end border-bottom bg-dark">
                     <nav class="nav nav-pills flex-column">
                         <a class="faq-link nav-link link-light" href="#item-1">How can I book an appointment?</a>
                         <a class="faq-link nav-link link-light" href="#item-2">Do you take walk-ins?</a>
