fixed highilight bug

--- a/FAQ.html
+++ b/FAQ.html
@@ -144,7 +144,7 @@
         <div class="container">
             <footer class="py-3 my-4 text-light">
                 <div>
-                    <a class="nav-link text-light " aria-current="page" href="./FAQ.html">
+                    <a class="nav-link text-light " aria-current="page" href="#faq">
                         <p class="text-success text-decoration-none text-center text">Back to Top</p>
                     </a>
                 </div>
