--- a/gallery.html
+++ b/gallery.html
@@ -140,7 +140,7 @@
             <div class="container">
                 <footer class="py-3 my-4 text-light">
                     <div>
-                        <a href="#home" class="text-success text-decoration-none text-center text">
+                        <a href="#gallery" class="text-success text-decoration-none text-center text">
                             <p class="text-success text-decoration-none text-center text">Back to Top</p>
                         </a>
                     </div>
