--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                             </div>
                         </div>
                         <!-- form -->
-                        <h3 class="text-center text-white link-light text-decoration-none contact-text mt-4"> Or contact
+                        <h3 class="phone-num text-center text-white link-light text-decoration-none contact-text mt-4"> Or contact
                             us at: (123) 456-7890</h3>
                         <div class="container col-12 col-md-5 d-flex justify-content-center p-3">
                             <p class="bg-dark text-light p-3 rounded-1">
