adjusted button size

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             <div class="title-addr d-flex justify-content-center">
             </div>
             <div class="title-btn d-flex justify-content-center">
-                <a href="#contact"><button class="btn btn-primary m-2 rounded-2 ps-4 pe-4">Contact Us</button></a>
-                <a href="./gallery.html"> <button class="btn btn-secondary m-2 rounded-2">View Galleries</button> </a>
+                <a href="#contact"><button class="btn btn-lg btn-primary m-2 rounded-2 ps-4 pe-4">Contact Us</button></a>
+                <a href="./gallery.html"> <button class="btn btn-lg btn-secondary m-2 rounded-2">View Galleries</button> </a>
             </div>
             <br>
             <div class="containter">
