--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                                 This is to ensure that we respond to your inquiries as quickly and efficiently as
                                 possible.
                                 <br>Currently,
-                                walk-ins are available <b>Tuesdays</b>, however we appreiate a call ahead of time!
+                                walk-ins are available <b>Tuesdays</b>, however we appreiate a message ahead of time!
                             </p>
                         </div>
                     </div>
