--- a/FAQ.html
+++ b/FAQ.html
@@ -67,7 +67,7 @@
                                 <h5 class=""> ← Go Back</h5>
                             </a>
                             <a target="_blank"
-                                href="https://s2.q4cdn.com/175719177/files/doc_presentations/Placeholder-PDF.pdf"
+                                href="./aftercare.pdf"
                                 class="text-decoration-none link-light">
                                 <h5 class="back link-light">View Our Aftercare PDF →</h5>
                             </a>
